--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,11 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
+    <link
+      rel="shortcut icon"
+      href="../src/assets/lightbulb.png"
+      type="image/x-icon"
+    />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Project Lighthouse" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
