--- a/public/index.html
+++ b/public/index.html
@@ -4,21 +4,11 @@
     <meta charset="utf-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
-    <link
-      rel="shortcut icon"
-      href="../src/assets/lightbulb.png"
-      type="image/x-icon"
+      content="width=device-width, initial-scale=1, user-scalable=no"
     />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Project Lighthouse" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;400;700&display=swap"
-      rel="stylesheet"
-    />
-    <title>Lighthouse</title>
+    <meta name="description" content="Project Lighthouse Application" />
+    <title>Project Lighthouse</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
